# git-maintenance

./: LICENSE  README.md  gitignore  pyproject.toml  requirements.txt  upload_to_github_rich.py
