[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-maintenance"
version = "2.1.0"
description = "企业级 GitHub 仓库维护 CLI 工具 —— 支持上传、同步、清空、分支管理、仪表盘等全流程操作"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Magic", email = "3427957194@qq.com" },
]
keywords = [
    "github",
    "git",
    "cli",
    "repository-management",
    "automation",
    "devops",
    "rich",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
github-tool = "upload_to_github_rich:main"
grt = "upload_to_github_rich:main"

[project.urls]
Homepage = "https://github.com/magic-fss/git-maintenance"
Documentation = "https://github.com/magic-fss/git-maintenance#readme"
Repository = "https://github.com/magic-fss/git-maintenance"
Issues = "https://github.com/magic-fss/git-maintenance/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
